tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_global_identifier_post_pure_call_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierPostPureCallFastPath;

let receiver = 7;

fn touch() -> i32 {
  return 0;
}

fn main() -> i32 {
  touch();
  return [receiver ping];
}
