tests/tooling/fixtures/native/recovery/negative/negative_binary_literal_parser_trailing_decimal_digit.objc3
// Expected diagnostic code(s): O3P104.
module NegativeBinaryLiteralParserTrailingDecimalDigit;

let value = 0b102;

fn main() -> i32 {
  return 0;
}
